--- a/short-video-maker/.env.example
+++ b/short-video-maker/.env.example
@@ -5,3 +5,9 @@ WHISPER_VERBOSE=true
 PORT=3123
 DEV=true # local development mode
 DATA_DIR_PATH= # only for docker, otherwise leave empty
+
+# TTS Provider Configuration
+TTS_PROVIDER=kokoro # kokoro or google
+# Google Cloud Text-to-Speech (optional - for natural voice)
+GOOGLE_TTS_PROJECT_ID= # Your Google Cloud Project ID
+GOOGLE_TTS_API_KEY= # Path to service account key file or leave empty for default auth
