--- a/short-video-maker/package.json
+++ b/short-video-maker/package.json
@@ -68,6 +68,7 @@
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.3",
     "fs-extra": "^11.3.0",
+    "google-auth-library": "^10.3.0",
     "kokoro-js": "^1.2.0",
     "nock": "^14.0.3",
     "phonemizer": "^1.2.1",
