--- a/short-video-maker/.env.example
+++ b/short-video-maker/.env.example
@@ -7,7 +7,9 @@ DEV=true # local development mode
 DATA_DIR_PATH= # only for docker, otherwise leave empty
 
 # TTS Provider Configuration
-TTS_PROVIDER=kokoro # kokoro or google
+TTS_PROVIDER=kokoro # kokoro, google, or elevenlabs
 # Google Cloud Text-to-Speech (optional - for natural voice)
 GOOGLE_TTS_PROJECT_ID= # Your Google Cloud Project ID
 GOOGLE_TTS_API_KEY= # Path to service account key file or leave empty for default auth
+# ElevenLabs Text-to-Speech (optional - for ultra-realistic voice)
+ELEVENLABS_API_KEY= # Your ElevenLabs API key
