--- a/short-video-maker/.env.example
+++ b/short-video-maker/.env.example
@@ -13,3 +13,8 @@ GOOGLE_TTS_PROJECT_ID= # Your Google Cloud Project ID
 GOOGLE_TTS_API_KEY= # Path to service account key file or leave empty for default auth
 # ElevenLabs Text-to-Speech (optional - for ultra-realistic voice)
 ELEVENLABS_API_KEY= # Your ElevenLabs API key
+
+# VEO3 Audio Mode Configuration
+# false (default): Replace VEO3's audio with TTS narration (숏츠 자동화용 - 내레이션)
+# true: Use VEO3's native generated audio (대화/연기 콘텐츠용)
+VEO3_USE_NATIVE_AUDIO=false
