--- a/short-video-maker/package.json
+++ b/short-video-maker/package.json
@@ -50,6 +50,7 @@
     "@emotion/styled": "^11.11.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google-cloud/text-to-speech": "^6.3.0",
+    "@google/genai": "^1.21.0",
     "@modelcontextprotocol/sdk": "^1.9.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
@@ -70,9 +71,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "fs-extra": "^11.3.0",
     "google-auth-library": "^10.3.0",
-    "kokoro-js": "^1.2.0",
     "nock": "^14.0.3",
-    "phonemizer": "^1.2.1",
     "pino": "^9.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
