--- a/short-video-maker/.env.example
+++ b/short-video-maker/.env.example
@@ -18,3 +18,6 @@ ELEVENLABS_API_KEY= # Your ElevenLabs API key
 # false (default): Replace VEO3's audio with TTS narration (숏츠 자동화용 - 내레이션)
 # true: Use VEO3's native generated audio (대화/연기 콘텐츠용)
 VEO3_USE_NATIVE_AUDIO=false
+
+# YouTube Upload Configuration (optional)
+YOUTUBE_CLIENT_SECRET_PATH= # Path to YouTube OAuth client secret JSON file
