--- a/short-video-maker/package.json
+++ b/short-video-maker/package.json
@@ -49,6 +49,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@google-cloud/storage": "^7.17.2",
     "@google-cloud/text-to-speech": "^6.3.0",
     "@google/genai": "^1.21.0",
     "@modelcontextprotocol/sdk": "^1.9.0",
@@ -71,6 +72,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "fs-extra": "^11.3.0",
     "google-auth-library": "^10.3.0",
+    "googleapis": "^164.1.0",
     "nock": "^14.0.3",
     "pino": "^9.6.0",
     "react": "^19.1.0",
