--- a/.gitignore
+++ b/.gitignore
@@ -1,175 +1,179 @@
 ## Dependencies
-#node_modules/
-#npm-debug.log*
-#yarn-debug.log*
-#yarn-error.log*
-#
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 ## Production builds
-#dist/
-#build/
-#
+dist/
+build/
+
 ## Environment variables
-#.env
-#.env.local
-#.env.development.local
-#.env.test.local
-#.env.production.local
-#
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 ## Logs
-#logs/
-#*.log
-#
+logs/
+*.log
+
 ## Runtime data
-#pids/
-#*.pid
-#*.seed
-#*.pid.lock
-#
+pids/
+*.pid
+*.seed
+*.pid.lock
+
 ## Coverage directory used by tools like istanbul
-#coverage/
-#
+coverage/
+
 ## nyc test coverage
-#.nyc_output
-#
+.nyc_output
+
 ## Dependency directories
-#jspm_packages/
-#
+jspm_packages/
+
 ## Optional npm cache directory
-#.npm
-#
+.npm
+
 ## Optional REPL history
-#.node_repl_history
-#
+.node_repl_history
+
 ## Output of 'npm pack'
-#*.tgz
-#
+*.tgz
+
 ## Yarn Integrity file
-#.yarn-integrity
-#
-## dotenv environment variables file
-#.env
-#
+.yarn-integrity
+
 ## Parcel-bundler cache (https://parceljs.org/)
-#.cache
-#.parcel-cache
-#
+.cache
+.parcel-cache
+
 ## next.js build output
-#.next
-#
+.next
+
 ## nuxt.js build output
-#.nuxt
-#
+.nuxt
+
 ## vuepress build output
-#.vuepress/dist
-#
+.vuepress/dist
+
 ## Serverless directories
-#.serverless
-#
+.serverless
+
 ## FuseBox cache
-#.fusebox/
-#
+.fusebox/
+
 ## DynamoDB Local files
-#.dynamodb/
-#
+.dynamodb/
+
 ## TernJS port file
-#.tern-port
-#
+.tern-port
+
 ## OS generated files
-#.DS_Store
-#.DS_Store?
-#._*
-#.Spotlight-V100
-#.Trashes
-#ehthumbs.db
-#Thumbs.db
-#
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
 ## IDE files
-#.vscode/
-#.idea/
-#*.swp
-#*.swo
-#*~
-#
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
 ## Video generation data
-#.ai-agents-az-video-generator/
-#
+.ai-agents-az-video-generator/
+
 ## Temporary files
-#tmp/
-#temp/
-#*.tmp
-#
+tmp/
+temp/
+*.tmp
+
 ## Video files
-#*.mp4
-#*.avi
-#*.mov
-#*.wmv
-#*.flv
-#*.webm
-#
+*.mp4
+*.avi
+*.mov
+*.wmv
+*.flv
+*.webm
+
 ## Audio files
-#*.mp3
-#*.wav
-#*.aac
-#*.ogg
-#*.m4a
-#
+*.mp3
+*.wav
+*.aac
+*.ogg
+*.m4a
+
 ## Model files
-#*.bin
-#*.onnx
-#*.pt
-#*.pth
-#
+*.bin
+*.onnx
+*.pt
+*.pth
+
 ## Docker
-#.docker/
-#
+.docker/
+
 ## Backup files
-#*.bak
-#*.backup
-#
+*.bak
+*.backup
+
 ## Cache directories
-#.cache/
-#cache/
-#
+.cache/
+cache/
+
 ## Test files
-#test-output/
-#screenshots/
-#
+test-output/
+screenshots/
+
 ## Documentation build
-#docs/_build/
-#docs/.doctrees/
-#
+docs/_build/
+docs/.doctrees/
+
 ## Python (if any Python tools)
-#__pycache__/
-#*.py[cod]
-#*$py.class
-#*.so
-#.Python
-#env/
-#venv/
-#ENV/
-#
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+
 ## Jupyter Notebook checkpoints
-#.ipynb_checkpoints
-#
+.ipynb_checkpoints
+
 ## Local configuration
-#config.local.*
-#settings.local.*
-#
+config.local.*
+settings.local.*
+.claude/settings.local.json
+
 ## Certificates
-#*.pem
-#*.key
-#*.crt
-#*.cert
-#
+*.pem
+*.key
+*.crt
+*.cert
+
 ## Database files
-#*.sqlite
-#*.db
-#
+*.sqlite
+*.db
+
 ## Archive files
-#*.zip
-#*.tar.gz
-#*.rar
-#*.7z
+*.zip
+*.tar.gz
+*.rar
+*.7z
+
+## Google OAuth Client Secrets (CRITICAL - DO NOT COMMIT!)
+client_secret_*.json
+*_client_secret*.json
 
 ## RAW folder
 RAW/
+
+
