--- a/short-video-maker/tsconfig.build.json
+++ b/short-video-maker/tsconfig.build.json
@@ -4,5 +4,5 @@
     "outDir": "./dist"
   },
   "include": ["src/**/*"],
-  "exclude": ["**/*.test.ts", "src/ui", "src/short-creator/deprecated"]
+  "exclude": ["**/*.test.ts", "src/ui", "src/components", "src/short-creator/deprecated"]
 }
